# creative-coding.py

./: Pipfile  pyproject.toml  tags
src/: .gitignore  color_manager.py  context_manager.py  ghost-veil.py  klauber_triangle.py  lorenz_attractor.py  multiple_blobs.py  order_and_chaos.py  particle.py  random_controller.py  subdivisions.py  test1.py  test_color_lerp.py  utils.py  vector.py  vector_field.py  vector_field_background.py  vector_field_brush.py  vector_test.py  vf_brush_test.py
src/lib/: color_manager.py  context_manager.py  klauber_triangle.py  line_brush.py  particle.py  random_controller.py  utils.py  vector.py  vector_field.py  vector_field_background.py  vector_field_brush.py
